Unreal: added toggle TSU layers dialog

--- a/pentevo/unreal/Unreal/cfg/help_eng.html
+++ b/pentevo/unreal/Unreal/cfg/help_eng.html
@@ -109,6 +109,8 @@
 <td> set double window size in windowed mode </td> </tr>
 <tr> <td> <B>{main.sizem}</B> </td>
 <td> maximize window in windowed mode </td> </tr>
+<tr> <td> <B>{main.tsutoggle}</B> </td>
+<td> toggle TSU layers </td> </tr>
 
 </table>
 
