Unreal: added toggle flic/noflic hotkey

--- a/pentevo/unreal/Unreal/cfg/help_eng.html
+++ b/pentevo/unreal/Unreal/cfg/help_eng.html
@@ -23,6 +23,8 @@
 <td> select video filter for output </td> </tr>
 <tr> <td> <B>{main.selectdriver}</B> </td>
 <td> select driver for filters, working through driver </td> </tr>
+<tr> <td> <B>{main.flictoggle}</B> </td>
+<td> toggle flic/noflic </td> </tr>
 <tr> <td> <B>{main.fullscreen}</B> </td>
 <td> toggle full-screen on/off (only for GDI, Overlay, or ddraw blitter video modes)</td> </tr>
 <tr> <td> <B>{main.pause}</B> </td>
