Unreal: added toggle status line

--- a/pentevo/unreal/Unreal/cfg/help_eng.html
+++ b/pentevo/unreal/Unreal/cfg/help_eng.html
@@ -43,6 +43,8 @@
 <td> coarse decrease selected parameter </td> </tr>
 <tr> <td> <B>{main.leds}</B> </td>
 <td> toggle on-screen leds</td> </tr>
+<tr> <td> <B>{main.status}</B> </td>
+<td> toggle status line</td> </tr>
 <tr> <td> <B>{main.maxspeed}</B> </td>
 <td> toggle max. speed</td> </tr>
 <tr> <td> <B>{main.pokedialog}</B> </td>
