Unreal: added whole RAM dump save

--- a/pentevo/unreal/Unreal/cfg/help_eng.html
+++ b/pentevo/unreal/Unreal/cfg/help_eng.html
@@ -99,6 +99,8 @@
 <td> toggle sticky-keys mode </td> </tr>
 <tr> <td> <B>{main.autofire}</B> </td>
 <td> toggle autofire mode </td> </tr>
+<tr> <td> <B>{main.saveram}</B> </td>
+<td> save RAM dump </td> </tr>
 <tr> <td> <B>{main.saveall}</B> </td>
 <td> save CMOS and unsaved diskette images </td> </tr>
 <tr> <td> <B>{main.xtkbd}</B> </td>
