Unreal: fix 7FFD edit in debugger, add ZX screen memory view, fix VS2017 project

--- a/pentevo/unreal/Unreal/cfg/help_eng.html
+++ b/pentevo/unreal/Unreal/cfg/help_eng.html
@@ -236,7 +236,10 @@
 <td> configure on-screen watches </td> </tr>
 
 <tr> <td> <B>{mon.scrshot}</B> </td>
-<td> toggle screenshot/screendump/watches </td> </tr>
+<td> toggle watches/screendump </td> </tr>
+
+<tr> <td> <B>{mon.scrshot_alt}</B> </td>
+<td> toggle main\alt screen in screendump window </td> </tr>
 
 <tr> <td> <B>{mon.setwatch}</B> </td>
 <td> set user-defined watch address </td> </tr>
